fix nowrap css

--- a/docs/static/css/style.css
+++ b/docs/static/css/style.css
@@ -1,10 +1,15 @@
-#docsify-darklight-theme{
-    margin-top: -0.5rem;
-    margin-right: 8vh;
-}
-
-
 :root {
     /* Change the theme color */
-    --theme-color: #42b983;
+    --theme-color: #42b983 !important;
+}
+
+/* Single line markdown code */
+.markdown-section code:not([class*="lang-"]):not([class*="language-"]){
+    white-space: normal !important;
+}
+
+/* Theme switcher */
+#docsify-darklight-theme {
+    margin-top: -0.5rem;
+    margin-right: 8vh;
 }
